<resources>
    <string name="app_name">Teknik Servis Uygulaması</string>
    <string name="title_home">Ana Ekran</string>
    <string name="title_dashboard">Ekle</string>
    <string name="title_notifications">Sms geçmişi</string>

    <string name="ad_soyad">Ad Soyad</string>
    <string name="servis_ekleme_formu">Servis Ekleme Formu</string>
    <string name="marka">Marka</string>
    <string name="telefon_numaras">Telefon Numarası (Başında 0 olarak)</string>
    <string name="model">Model</string>
    <string name="cihazda_sorun_ne">Cihazda sorun ne?</string>
    <string name="ekle">Ekle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kaydet">Kaydet</string>
</resources>