<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sms.SmsGecmisiFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20sp"
                    android:text="@string/servis_ekleme_formu"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/adsoyad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:layout_marginBottom="10sp"
                    android:ems="10"
                    android:hint="@string/ad_soyad"
                    android:inputType="textPersonName"
                    android:paddingBottom="10sp" />

                <EditText
                    android:id="@+id/telefon_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:layout_marginBottom="10sp"
                    android:ems="10"
                    android:hint="@string/telefon_numaras"
                    android:inputType="phone"
                    android:paddingBottom="10sp" />

                <EditText
                    android:id="@+id/marka"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:layout_marginBottom="10sp"
                    android:ems="10"
                    android:hint="@string/marka"
                    android:inputType="text"
                    android:paddingBottom="10sp" />

                <EditText
                    android:id="@+id/model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:layout_marginBottom="10sp"
                    android:ems="10"
                    android:hint="@string/model"
                    android:inputType="text"
                    android:paddingBottom="10sp" />

                <EditText
                    android:id="@+id/ariza"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:layout_marginBottom="10sp"
                    android:ems="10"
                    android:hint="@string/cihazda_sorun_ne"
                    android:inputType="text" />

                <Button
                    android:id="@+id/ekle_btn"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginRight="20sp"
                    android:text="@string/ekle"
                    android:textAlignment="center" />
            </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>